Closed
Bug 742030
Opened 14 years ago
Closed 14 years ago
Cloning a node can change its style attribute
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla14
People
(Reporter: neil, Assigned: bzbarsky)
Details
Attachments
(1 file)
|
12.52 KB,
patch
|
sicking
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce problem:
1. Create an HTML element
2. Set its style attribute to something which Gecko's CSS parser considers noncanonical, such as 'color: #ff0000'
3. Clone the element
4. Read the style attribute back from the clone
Expected results: Style attribute read back from the clone should equal the style attribute read back from the original element
Actual result: Style attribute read back from the node: 'color: #ff0000'
Style attribute read back from the clone: 'color: rgb(255, 0, 0);'
| Assignee | ||
Comment 1•14 years ago
|
||
Attachment #611969 -
Flags: review?(jonas)
Attachment #611969 -
Flags: review?(jonas) → review+
| Assignee | ||
Updated•14 years ago
|
| Assignee | ||
Comment 2•14 years ago
|
||
Flags: in-testsuite+
Keywords: checkin-needed
Whiteboard: [need landing]
Target Milestone: --- → mozilla14
| Assignee | ||
Comment 3•14 years ago
|
||
Comment 4•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•