Bug 742030.  When cloning nodes with inline style, preserve the inline style string.  r=sicking