content/base/src/nsGenericElement.cpp
@@ -3609,6 +3609,7 @@ nsGenericElement::GetInlineStyleRule()
 
 NS_IMETHODIMP
 nsGenericElement::SetInlineStyleRule(css::StyleRule* aStyleRule,
+                                     const nsAString* aSerialized,
                                      bool aNotify)
 {
   NS_NOTYETIMPLEMENTED("nsGenericElement::SetInlineStyleRule");
